--- a/css/site.css
+++ b/css/site.css
@@ -3,10 +3,18 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-simple-sidebar/blob/master/LICENSE)
  */
+body {
+font-family: "Opensans", sans-serif;
+}
 
- #wrapper {
+#wrapper {
     overflow-x: hidden;
- }
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
 
 #sidebar-wrapper {
   min-height: 100vh;
@@ -15,6 +23,39 @@
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 #sidebar-wrapper .sidebar-heading {
@@ -25,7 +66,9 @@
 #sidebar-wrapper .list-group {
   width: 15rem;
 }
-
+.list-group-item {
+  background-color:transparent;
+}
 #page-content-wrapper {
   min-width: 100vw;
 }
@@ -48,3 +91,14 @@
     margin-left: -15rem;
   }
 }
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+
+
+
+
+
+
